@@ -4,12 +4,14 @@ package XTaTIK::Common;
 
 require Exporter;
 @ISA = qw(Exporter);
-@EXPORT_OK = qw(n_to_br  find_product_pic);
+@EXPORT_OK = qw(n_to_br  set_product_pic);
 
 use strict;
 use warnings;
 use HTML::Entities;
-use File::Spec::Functions qw/catfile/;
+use File::Glob qw/bsd_glob/;
+use File::Spec::Functions qw/catfile  splitpath/;
+use experimental 'postderef';
 
 sub n_to_br {
     my $data = shift;
@@ -17,10 +19,30 @@ sub n_to_br {
     return encode_entities($data) =~ s/\n\r?|\r\n/<br>/gr;
 }
 
-sub find_product_pic {
+sub set_product_pic {
     my $c = shift;
+    my ( $pic, $num ) = @_;
 
-    $_[0] = 'nopic.png'
-        unless $c->app->static
-            ->file( catfile 'product-pics', $_[0]//'' );
+    # This product has a set pic; check all exist and return
+    if ( length $pic ) {
+        $pic = join '?',
+            grep $c->app->static->file( catfile 'product-pics', $_ ),
+                split /\?/, $pic;
+
+        $pic = 'nopic.png' unless length $pic;
+        $_[0] = $pic;
+        return;
+    }
+
+    # No pic set; auto-find them using product number
+    my @pics;
+    for ( $c->app->static->paths->@* ) {
+        push @pics, map +(splitpath $_)[-1], grep -r,
+            catfile($_, 'product-pics', "$num.jpg"),
+            bsd_glob catfile $_, 'product-pics', $num . '___*.jpg';
+    }
+
+    $pic = join '?', @pics;
+    $pic = 'nopic.png' unless length $pic;
+    $_[0] = $pic;
 }
