@@ -3,7 +3,7 @@ package XTaTIK::Controller::Cart;
 # VERSION
 
 use Mojo::Base 'Mojolicious::Controller';
-use XTaTIK::Common qw/n_to_br  find_product_pic/;
+use XTaTIK::Common qw/n_to_br  set_product_pic/;
 use experimental 'postderef';
 
 sub index {
@@ -11,7 +11,7 @@ sub index {
 
     my %items = $self->cart->all_items_cart_quote_kv;
     for ( $items{cart}->@*, $items{quote}->@*) {
-        find_product_pic( $self, $_->{image} );
+        set_product_pic( $self, @$_{qw/image number/} );
     }
     $self->stash( %items );
 };
